fixed horizontal scrolling issue

--- a/styles/background_style.css
+++ b/styles/background_style.css
@@ -3,6 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); /* Regular 400 */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap'); /* Bold 700 */
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 @media only screen and (min-width: 401px) {
     *{
         padding: 0;
